<resources>
    <string name="app_name">Social_Media</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="your_web_client_id">1031834366359-cjii7qkbfjon2uaev7ga2girvinkmnhh.apps.googleusercontent.com</string>

    <string name="facebook_app_id">1164600410928419</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">b614ea41fc20dde066ad4ddcb2949296</string>
    <string name="base_comment_text">This is a comment</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="add">ADD</string>
    <string name="add_a_description_to_your_post">Add a description to your post</string>
    <string name="enter_description">Enter description</string>
    <string name="click_the_image_to_select_a_picture_to_post">Click the image to select a picture to post</string>
    <string name="post">Post</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="tap_image_to_change_profile_picture">Tap image to change profile picture</string>
    <string name="username">Username:</string>
    <string name="name_and_surname">NAME AND SURNAME</string>
    <string name="email_settings">Email:</string>
    <string name="email_settings_2">EMAIL</string>
    <string name="log_out">LOG OUT</string>
    <string name="main_text_of_post">MAIN TEXT OF POST</string>
    <string name="_0_people_liked_this_post">0 people liked this post.</string>
    <string name="oops">Oops!</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="try_again">try again</string>

</resources>