<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="?colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimaryVariant">

        <View
            android:id="@+id/roundedView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/rounded_corners"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/roundedView"
            android:text="@string/welcome"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:alpha="0.8"
            android:layout_marginBottom="85dp"
            android:layout_marginStart="25dp"
            />

        <TextView
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome"
            android:text="@string/sign_in"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_marginStart="25dp"
            />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/roundedView"
            android:text="@string/email"
            android:textSize="20sp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:alpha="0.5"
            android:backgroundTint="@color/gray"
            android:hint="@string/enter_email"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextView"
            />

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailText"
            android:text="@string/password"
            android:textSize="20sp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/gray"
            android:hint="@string/enter_password"
            android:alpha="0.5"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
            app:layout_constraintStart_toStartOf="parent"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_btn"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/button_style"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordText"
            />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginBtn"
            android:text="Or"
            android:textSize="15sp"
            android:alpha="0.6"
            android:layout_marginTop="30dp"
            />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or"
            android:layout_marginTop="30dp"
            android:gravity="center"
            >


            <ImageView
                android:id="@+id/imageViewGoogle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/google"
                android:adjustViewBounds="true"
                android:layout_marginEnd="20dp"
                />
            <ImageView
                android:id="@+id/imageViewFacebook"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/facebook"
                android:adjustViewBounds="true"
                android:layout_marginStart="20dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="15dp"
            >

            <TextView
                android:id="@+id/randomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.6"
                android:layout_marginEnd="10dp"
                android:text="@string/don_t_have_an_account"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/registerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:textAllCaps="false"
                android:textColor="@color/teal_200"
                android:textSize="17sp"
                />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:indeterminateTint="@color/darkPink"
            android:visibility="gone"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
