<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    tools:context=".presentation.home.feed.FeedFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="visible"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        android:indeterminateTint="@color/darkPink"
        />

    <LinearLayout
        android:id="@+id/noNetLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/gray"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/oopsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oops"
            android:textSize="60sp"
            android:textColor="@color/darkPink"
            />

        <TextView
            android:id="@+id/noNetTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_connection"
            android:textSize="20sp"
            android:textColor="@color/darkPink"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/retryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>